# wasm-app

./: Cargo.toml  flake.nix
src/: lib.rs  main.rs
wit/: world.wit
